--- a/create.html
+++ b/create.html
@@ -1,70 +1,171 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>إنشاء ألبوم</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>إنشاء رسالة حب</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
+
+<style>
+body{
+font-family:Tajawal;
+background:linear-gradient(180deg,#14030a,#070203);
+color:white;
+display:flex;
+justify-content:center;
+align-items:center;
+height:100vh;
+margin:0;
+}
+
+.box{
+width:380px;
+background:rgba(255,255,255,0.05);
+padding:25px;
+border-radius:18px;
+backdrop-filter:blur(10px);
+box-shadow:0 0 40px rgba(255,0,80,0.15);
+}
+
+h2{
+text-align:center;
+margin-bottom:20px;
+color:#ff8fb1;
+}
+
+input,textarea{
+width:100%;
+padding:12px;
+margin-bottom:12px;
+border-radius:10px;
+border:none;
+background:#1a0a10;
+color:white;
+font-family:Tajawal;
+}
+
+textarea{height:80px;}
+
+button{
+width:100%;
+padding:13px;
+border:none;
+border-radius:12px;
+background:linear-gradient(135deg,#ff2d55,#ff6f91);
+color:white;
+font-size:16px;
+cursor:pointer;
+margin-top:8px;
+}
+
+button:hover{opacity:.9}
+
+.result{
+margin-top:18px;
+text-align:center;
+}
+
+.linkbox{
+background:#111;
+padding:10px;
+border-radius:10px;
+margin-bottom:10px;
+font-size:13px;
+word-break:break-all;
+}
+</style>
 </head>
-<body style="font-family:Arial;padding:40px">
+<body>
 
-<h2>إنشاء ألبوم حب</h2>
+<div class="box">
 
-<input id="name" placeholder="اسم الحبيب"><br><br>
-<input id="from" placeholder="اسمك"><br><br>
-<input id="pass" placeholder="باسورد الألبوم"><br><br>
-<textarea id="msg" placeholder="اكتب الرسالة"></textarea><br><br>
+<h2>💝 إنشاء رسالة حب</h2>
+
+<input id="sender" placeholder="اسمك">
+<input id="receiver" placeholder="اسم الحبيبة">
+<input id="pass" placeholder="كلمة مرور (اختياري)">
+<textarea id="msg" placeholder="اكتب رسالتك"></textarea>
 
 <button onclick="createAlbum()">إنشاء الألبوم</button>
 
-<h3 id="result"></h3>
+<div id="done" class="result"></div>
 
+</div>
+
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
 <script>
-var firebaseConfig = {
-  apiKey: "AIzaSyAEpVTV2bAzIal7FkEl3JadPvn0fkqpAF4",
-  authDomain: "love-site-e2cb7.firebaseapp.com",
-  databaseURL: "https://love-site-e2cb7-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "love-site-e2cb7",
-  storageBucket: "love-site-e2cb7.appspot.com",
-  messagingSenderId: "861816430901",
-  appId: "1:861816430901:web:144adb8ebbc2ad966d6c7c"
+const firebaseConfig = {
+apiKey: "AIzaSyAEpVTV2bAzIal7FkEl3JadPvn0fkqpAF4",
+authDomain: "love-site-e2cb7.firebaseapp.com",
+databaseURL: "https://love-site-e2cb7-default-rtdb.europe-west1.firebasedatabase.app",
+projectId: "love-site-e2cb7",
+storageBucket: "love-site-e2cb7.appspot.com",
+messagingSenderId: "861816430901",
+appId: "1:861816430901:web:144adb8ebbc2ad966d6c7c"
 };
 
 firebase.initializeApp(firebaseConfig);
-var db = firebase.database();
-</script>
-function randomId(){
- return Math.random().toString(36).substring(2,8);
+const db = firebase.database();
+
+function randomCode(){
+return "love"+Math.random().toString(36).substring(2,8);
 }
 
 function createAlbum(){
 
- const id = randomId();
+const sender = document.getElementById("sender").value.trim();
+const receiver = document.getElementById("receiver").value.trim();
+const pass = document.getElementById("pass").value.trim();
+const msg = document.getElementById("msg").value.trim();
 
- const data = {
-   recipientName: document.getElementById("name").value,
-   senderName: document.getElementById("from").value,
-   password: document.getElementById("pass").value,
-   sections:[
-    {
-     id:"s1",
-     type:"message",
-     order:1,
-     data:{
-      title:"رسالة حب",
-      text:document.getElementById("msg").value
-     }
-    }
-   ]
- };
+if(!sender || !receiver){
+alert("اكتب الاسماء");
+return;
+}
 
- db.ref("albums/"+id).set(data).then(()=>{
-   document.getElementById("result").innerHTML =
-   "لينك الألبوم 👇<br><br>"+
-   "<b>album.html?id="+id+"</b>";
- });
+const code = randomCode();
 
+db.ref("albums/"+code).set({
+password:pass,
+senderName:sender,
+recipientName:receiver,
+sections:[
+{
+id:"s1",
+type:"message",
+order:1,
+data:{
+title:"رسالة حب",
+text:msg || "بحبك ❤️"
+}
+}
+]
+}).then(()=>{
+
+const link = "https://karimelwakil.github.io/romantic-love/?id="+code;
+
+document.getElementById("done").innerHTML = `
+<div class="linkbox">${link}</div>
+
+<button onclick="copyLink('${link}')">📋 نسخ الرابط</button>
+<button onclick="openLink('${link}')">🚀 فتح الآن</button>
+`;
+
+});
+
+}
+
+function copyLink(link){
+navigator.clipboard.writeText(link);
+alert("تم نسخ الرابط");
+}
+
+function openLink(link){
+window.open(link,"_blank");
 }
 </script>
 
