--- a/love-album.html
+++ b/love-album.html
@@ -363,7 +363,7 @@ oninput="updateAlbumField('passwordHint',this.value)">
           <label><div class="color-preview"><span class="swatch" id="swatchBorder"></span>إطار</div><input type="color" id="colorBorder" oninput="updateColor('borderColor',this.value)"></label>
         </div>
       </div>
-     
+     </div>
 
     <!-- Tab: Settings -->
     <div id="tabSettings" style="display:none" class="animate-fade-up">
