--- a/love-album.html
+++ b/love-album.html
@@ -8,9 +8,20 @@
 <style>
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
 :root{
---bg:#110810;--card:#1a0f15;--border:#2a1520;--input:#1e1218;
---primary:#c9455a;--primary-fg:#fef2f0;--accent:#d4a843;--accent-fg:#110810;
---fg:#f5e6d3;--muted:#8a7080;--destructive:#e74c3c;
+--bg:#07070a;
+--card:#111118;
+--border:#3a2d0f;
+--input:#0d0d12;
+
+--primary:#FFD166;          /* اللون الرئيسي كله أصفر */
+--primary-fg:#000000;
+
+--accent:#FFD166;           /* الذهبي */
+--accent-fg:#000;
+
+--fg:#ffffff;               /* النص أبيض */
+--muted:#b7b7b7;
+--destructive:#e74c3c;
 --radius:12px;
 }
 body{font-family:'Tajawal',sans-serif;background:var(--bg);color:var(--fg);min-height:100vh;overflow-x:hidden;direction:rtl}
@@ -23,7 +34,11 @@ input,textarea,select,button{font-family:'Tajawal',sans-serif}
 /* Utilities */
 .container{max-width:800px;margin:0 auto;padding:0 16px}
 .btn{display:inline-flex;align-items:center;justify-content:center;gap:8px;padding:14px 28px;border-radius:var(--radius);font-size:16px;font-weight:500;border:none;cursor:pointer;transition:all .3s}
-.btn-primary{background:linear-gradient(135deg,#c9455a,#e05a6f);color:var(--primary-fg);box-shadow:0 0 30px rgba(201,69,90,.3)}
+.btn-primary{
+background:linear-gradient(135deg,#FFD166,#ffb800);
+color:#000;
+box-shadow:0 0 25px rgba(255,209,102,.4);
+}
 .btn-primary:hover{opacity:.9;transform:translateY(-1px)}
 .btn-accent{background:linear-gradient(135deg,#d4a843,#e0be5a);color:var(--accent-fg)}
 .btn-accent:hover{opacity:.9}
@@ -36,7 +51,12 @@ input,textarea,select,button{font-family:'Tajawal',sans-serif}
 .input::placeholder{color:var(--muted);opacity:.6}
 textarea.input{resize:none}
 .card{background:rgba(26,15,21,.6);backdrop-filter:blur(20px);border:1px solid rgba(201,69,90,.15);border-radius:16px;padding:24px}
-.text-gradient-gold{background:linear-gradient(135deg,#d4a843,#e8d48a,#d4a843);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
+.text-gradient-gold{
+background:linear-gradient(135deg,#FFD166,#fff0b3,#FFD166);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
+background-clip:text;
+}
 .text-gradient-rose{background:linear-gradient(135deg,#c9455a,#e88a9a,#c9455a);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .glow-rose{box-shadow:0 0 30px rgba(201,69,90,.3),0 0 60px rgba(201,69,90,.1)}
 .glow-gold{box-shadow:0 0 30px rgba(212,168,67,.3),0 0 60px rgba(212,168,67,.1)}
